--- a/teamheroic/styles.css
+++ b/teamheroic/styles.css
@@ -1,3 +1,4 @@
-md-toolbar {
-  color: #1F242A;
+
+md-toolbar.md-default-theme:not(.md-menu-toolbar), md-toolbar:not(.md-menu-toolbar)  {
+  background-color: #1f242a
 }
