--- a/teamheroic/styles.css
+++ b/teamheroic/styles.css
@@ -11,13 +11,20 @@ md-toolbar.md-default-theme:not(.md-menu-toolbar), md-toolbar:not(.md-menu-toolb
 
 ]}
 
+
+
 .header-text {
   font-size: 30px;
   text-align: center;
   margin-top: 10px;
 }
-.md-headline, .md-title{
+.md-title {
+  font-size: 34px;
+}
+.md-headline{
   text-align: justify;
+  font-size: 30px;
+  font-weight: 300;
 }
 .rx-leaders {
   font-size: 24px;
